name:          tasty-papi
version:       0.1
cabal-version: 1.18
license:       BSD3
license-file:  LICENSE
copyright:     2023, Alexey Khudyakov
author:        Alexey Khudyakov <alexey.skladnoy@gmail.com>
maintainer:    Alexey Khudyakov <alexey.skladnoy@gmail.com>
homepage:      https://github.com/Shimuuar/tasty-bench
bug-reports:   https://github.com/Bodigrim/tasty-bench/issues
category:      Development, Performance, Testing, Benchmarking
build-type:    Simple

Synopsis:
  Bencmarking using instruction counting
description:
  Benchmarking framework which uses instruction counters intead of
  time measurements. Instruction count is only proxy for code
  performance but unlike time could be measured deterministically.
  PAPI is used in order to access hardware counters. 

extra-source-files:
  README.md
  Changelog.md

Library
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  --
  Build-Depends:    base            >=4.9  && <5
                  , tasty           >=0.11.3
                  , containers      >=0.5
                  , deepseq
                  , stm
  extra-libraries: papi
  Exposed-modules: Test.Tasty.PAPI

test-suite tasty-papi-run
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests
  --
  Build-Depends:    base        -any
                  , tasty       -any
                  , tasty-papi  -any